--- a/static/HTML/future.html
+++ b/static/HTML/future.html
@@ -137,7 +137,9 @@
     <label for="result">Calculated Result:</label>
     <input type="text" id="result" name="result" readonly>
 </form>
-
+ <!-- Click me -->
+ <button id="myButton">Click Me!</button>
+ <div id="api-result"></div>
 <!-- JavaScript for Calculation -->
 <script>
     // Get references to the dropdown menus and result text box
@@ -161,7 +163,40 @@
 
         // Update the result textbox with the calculated value
         resultTextbox.value = calculatedResult;
+    };
+
+    // Click Event on myButton
+    document.getElementById('myButton').addEventListener('click', function() {
+      // Call the endpoint using the fetch API
+      fetch("https://reqres.in/api/users?page=2")
+      .then(response => {
+          // Check if the response is OK
+          if (!response.ok) {
+              throw new Error('Network response was not ok');
+          }
+          return response.json();
+      })
+      .then(data => {
+          // Handle the data returned from the endpoint
+          console.log(data);
+          const resultDiv = document.getElementById("api-result");
+          resultDiv.innerHTML = JSON.stringify(data)
+      })      
+      .catch(error => {
+          // Handle any errors that occurred during the fetch
+          console.error('There was a problem with the fetch operation:', error);
+      })
+      .then(data => {
+    // Example: Assuming data is an array of items with `name` and `value` properties
+    const resultDiv = document.getElementById('result');
+    let content = '<ul>';
+    for (const item of data) {
+        content += `<li>${item.name}: ${item.value}</li>`;
     }
+    content += '</ul>';
+    resultDiv.innerHTML = content;
+    });
+  });
 </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
